use beego framework

--- a/conf/app.conf
+++ b/conf/app.conf
@@ -1,9 +1,5 @@
-appname = short_url
-httpaddr = "127.0.0.1"
+appname = try_beego
 httpport = 8080
-runmode = "dev"
-autorender = true
-recoverpanic = false
-viewspath = "views"
+runmode = dev
 
 include "mongo.conf"
