--- a/conf/mongo.conf
+++ b/conf/mongo.conf
@@ -1,4 +1,4 @@
-mongo_host="127.0.0.1"
-mongo_port="3000"
-mongo_user="root"
-mongo_pwd=""
+mongo_url="127.0.0.1:3000"
+mongo_database="short_url"
+# mongo_user="root"
+# mongo_pwd=""
